[package]
name = "aitui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
tui-textarea = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
textwrap = "0.16"
futures-util = "0.3"
